fix: contrast issues in footer

--- a/src/index.scss
+++ b/src/index.scss
@@ -33,6 +33,7 @@ $mobile: 700px;
   --text-main: #333;
   --text-inverse: white;
   --text-muted: #646363;
+  --text-muted-inverse: #8a8989;
 
   // spacing
   --px: Min(Max(0.25rem, 4vw), 4rem);
@@ -664,7 +665,7 @@ textarea,
       gap: 0.5em;
     }
     svg {
-      // align icons vertically with other text elements
+      // align icons vertically with other text element
       display: block;
     }
     .article-btn {
@@ -815,7 +816,7 @@ textarea,
   padding: 4rem 2rem;
   text-align: center;
 
-  color: var(--text-muted);
+  color: var(--text-muted-inverse);
   .footer-container {
     width: 62%;
     p {
@@ -846,20 +847,20 @@ textarea,
       }
     }
     .social {
-      margin: 3rem auto 4rem;
       display: flex;
       flex-direction: column;
       align-items: center;
       width: 100%;
+      margin: 3rem auto 4rem;
       .link-icons {
         display: flex;
-        width: 15rem;
         justify-content: space-between;
+        width: 15rem;
 
         span {
           font-size: 2.5rem;
           svg {
-            fill: var(--text-muted);
+            fill: var(--text-muted-inverse);
             transition: fill 300ms ease;
             &:hover {
               fill: var(--text-inverse);
